# cpptest

NW/: .cproject  Makefile  Matrix.h  NP_000913.fasta  NP_002590.fasta  NP_246273.fasta  SimilarityMatrix.h  a6.2.txt  pde5.sh  prob.sh  semiglobal_prob.sh  testcasegapend.sh  thielebsp.sh
NW-cmake/: .cproject  .project  Alignment.cpp  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  SimilarityMatrix.cpp  cmake_install.cmake  fasta2string.cpp  fasta2string.h  semiglobalbsp.sh  testlocal.sh
NW-cmake/Testing/Temporary/: CTestCostData.txt
cpptest1/: .cproject  .project  CMakeLists.txt
cpptest1/src/: RationalNumber.cpp  RationalNumber.h  rationalnumber_test.cpp
